# Tech-Shop-Backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_06_29_0018-7a7964fa18b8_add_user_table_and_restructure_layout.py  2026_06_29_0100-b4c3f9a1d2e7_add_product_offer_combo_tables.py  2026_06_29_0200-a5f4c8d9e1b2_add_images_to_offers_and_combos.py  2026_06_29_0300-c7d8e9f0a1b2_add_categories_and_remove_items.py  2026_06_29_0400-d3e4f5a6b7c8_add_pedidos.py
app/: __init__.py  config.py  database.py  main.py  models.py
app/api/: deps.py  router.py
app/api/endpoints/: auth.py  categorias.py  combos.py  items.py  ofertas.py  pedidos.py  productos.py  users.py
app/cli/: __init__.py  reset_database.py  seed_sample_data.py
app/core/: config.py  database.py  security.py
app/core/base/: __init__.py  repository.py  service.py  (+1 more)
app/models/: __init__.py  associations.py  categoria.py  combo.py  item.py  oferta.py  pedido.py  producto.py  user.py
app/repositories/: categoria.py  combo.py  item.py  oferta.py  pedido.py  producto.py  user.py
app/schemas/: __init__.py  categoria.py  combo.py  oferta.py  pedido.py  producto.py  resumen.py  user.py
app/services/: categoria.py  combo.py  item.py  oferta.py  pedido.py  producto.py  user.py
tests/: conftest.py  helpers.py  test_auth_api.py  test_catalog_endpoints.py  test_categorias_api.py  test_combos_api.py  test_health_api.py  test_items_api.py  test_ofertas_api.py  test_pedidos_api.py  test_productos_api.py  test_users_api.py
(+14 files in other folders)
