[project]
name = "orbita-backend"
version = "1.0.0"
description = "FastAPI + MySQL Backend initialized with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "pymysql>=1.1.1",
    "cryptography>=42.0.8",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.1.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
